testsuite/tests/indexed-types/should_fail/T9580a.hs
{-# LANGUAGE KindSignatures, TypeFamilies #-}
module T9580a( Dimensional ) where

import Data.Kind (Type)

data family Dimensional var :: Type -> Type
newtype instance Dimensional Int v = Quantity' v
